--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h2 class="alert alert-primary">Secure Login with Google</h2>
+    <h2 class="alert alert-primary" style="text-align:center;">Secure Login with Google</h2>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <div class="data"> 
         <p>Name</p>
